Changelog

0.2.2
- Bugfix: Document can be corrupted by garbage collector when created from data (or from file handle) (fixes #19)

0.2.1
- Bugfix: Fixed byte order in image format string used for Pillow
- Bugfix: Prevent segmentation fault when performing some operations on locked documents (fixes #4)
- Bugfix: Fix include paths in C++ (fixes #2)
- Change namespace syntax to support old compilers (earlier than C++17) (fixes #6)

0.2.0
- Add the font infos to the TextBox object (Poppler 0.89.0)
- Added __version__ to the Python package
- Added buffer interface to Image
- Added __str__ method to Image.Format enum, for interoperability with pillow
- Bugfix: fixed the size of Image.data