@@ -87,6 +87,7 @@ setup(
         "Development Status :: 3 - Alpha",
         "Intended Audience :: Developers",
         "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
+        "Programming Language :: Python :: 3.6",
         "Programming Language :: Python :: 3.7",
         "Programming Language :: Python :: 3.8",
     ],
@@ -96,7 +97,7 @@ setup(
         "Source": "https://github.com/cbrunet/python-poppler",
         "Tracker": "https://github.com/cbrunet/python-poppler/issues",
     },
-    python_requires=">=3.7",
+    python_requires=">=3.6",
     packages=find_packages("src"),
     package_dir={"": "src"},
     include_package_data=True,
